--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -1,5 +1,5 @@
 
-@media only screen and (min-width: 320px) and (max-width: 440px){
+@media only screen and (max-width: 440px){
   div.middle{
     position: absolute;
     top: 20rem;
