--- a/src/css/style.css
+++ b/src/css/style.css
@@ -15,6 +15,10 @@
   src: url(../css/fonts/KGHAPPYShadows.ttf);
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -32,7 +36,7 @@ header,section {
 
 /*Navigation bar padding*/
 header .navbar{
-  padding-top: 0;
+  padding-top: 0.5em;
 }
 
 header .nav-item:last-child {
@@ -40,7 +44,7 @@ header .nav-item:last-child {
 }
 
 header .nav-item {
-  padding: 0.5em 1em 0.2em 1em;
+  padding: 0.5em 0.5em 0.2em 0.5em;
 }
 
 header .navbar-brand {
@@ -66,22 +70,26 @@ header a {
 }
 
 header a.home{
-  border: 2.4px solid gray;
+  border: 2.4px solid #000;
   border-radius: 0.5em;
 }
 
 header a.home:hover{
-  border: 2.4px solid gray;
+  border: 2.4px solid #fff;
   border-radius: 0em;
 }
 
 header .nav-link:hover {
-  border-bottom: 2.4px solid gray;
+  border-bottom: 2.4px solid #fff;
   color: #000;
 }
 
 header .nav-link:hover {
   color: black;
+}
+
+header button.btn{
+  background-color: transparent !important;
 }
 
 /*Header style*/
@@ -114,7 +122,7 @@ header .container .col-md-7 h6 {
 
 header .container .col-md-7 h1 {
   font-family: KGHappySolid;
-  font-size: 8.5vmin;
+  font-size: 7.3vmin;
   padding: 0.1em 0em;
 }
 
@@ -130,7 +138,7 @@ header .container .col-md-7 p {
   width: 100%;
   z-index: 9999;
   background: rgba(255, 255, 255, 0.815);
-  transition: all 1.5s ease;
+  transition: all 0.3s ease-in !important;
 }
 
 div.middle{
@@ -181,8 +189,8 @@ div.middle{
 main{
   background-image: url(../images/Home-Background.jpg);
   background-attachment: fixed;
-  background-repeat: no-repeat;
   background-size: cover;
+  background-position: bottom;
 }
 
 /********** section 1 **************/
@@ -226,7 +234,7 @@ main{
   margin-bottom: 0;
   padding: 0.3em 0.5em;
   display: inline-block;
-  background-color: #8BA3B2;
+  background-color: rgb(228, 227, 227);
   color: #000;
   font-family: KGHappy;
   display: inline-block;
@@ -260,6 +268,7 @@ main{
 .section-2 .open-pic img{
   position: relative;
   top: 150px;
+  opacity: 0.9;
 }
 
 .section-2 .open-intro p{
